<resources>
    <string name="app_name">MTool</string>
    <string name="net_err">网络不给力</string>
    <string name="res_err">ResponseError</string>
    <string name="mainSearchHint">搜索店铺/商品/商圈</string>
    <string name="nearby_shop">附近店铺</string>
    <string name="city_search_hint">输入城市名称</string>
    <string name="cur_city">当前定位城市</string>
    <string name="swip_city">切换城市</string>
    <string name="event">活动</string>
    <string name="search">搜&#160;&#160;&#160;&#160;索</string>
    <string name="shoping">购&#160;&#160;&#160;&#160;物</string>
    <string name="communicate">社&#160;&#160;&#160;&#160;交</string>
    <string name="message">消&#160;&#160;&#160;&#160;息</string>
    <string name="shopingcar">购物车</string>
    <string name="mine">我&#160;&#160;&#160;&#160;的</string>
    <string name="scan">扫&#160;&#160;&#160;&#160;码</string>
    <string name="total">全&#160;&#160;&#160;&#160;部</string>
    <string name="entertaiment">娱乐场所</string>
    <string name="entertaiment2">娱乐</string>
    <string name="food">餐饮美食</string>
    <string name="food2">餐&#160;&#160;&#160;&#160;饮</string>
    <string name="food3">餐饮</string>
    <string name="serviceManner">服务态度</string>
    <string name="cheep">物美价廉</string>
    <string name="shop_intro">店铺简介</string>
    <string name="backTop">返回顶部</string>
    <string name="shop_detail">店铺详情</string>
    <string name="share_shop">分享店铺</string>
    <string name="feedbac_err">提交错误</string>
    <string name="quick">跑腿代办</string>
    <string name="city_serv">同城服务</string>
    <string name="qr_id">二维码名片</string>
    <string name="history_order">历史订单</string>
    <string name="wallete">钱&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;包</string>
    <string name="my_collect">我的收藏</string>
    <string name="my_good">我赞过的</string>
    <string name="my_active">我的动态</string>
    <string name="rmb">￥</string>
    <string name="sreturn">返回</string>
    <string name="confrim">确定</string>
    <string name="clearSelect">清空已选</string>
    <string name="confrim_clear_cart">清空已选商品？</string>
    <string name="confrim_clear_history">确定清空所有历史纪录？</string>
    <string name="cancle">取消</string>
    <string name="total2">总计：</string>
    <string name="submit_order">提交订单</string>
    <string name="submit_evaluate">提交评价</string>
    <string name="default_spec">默认规格</string>
    <string name="addIfo">收货信息</string>
    <string name="payType">支付方式</string>
    <string name="smallChange">零钱</string>
    <string name="wechatPay">微信支付</string>
    <string name="aliPay">支付宝支付</string>
    <string name="distributeOption">配送方式</string>
    <string name="consumeOption">消费方式</string>
    <string name="orderDetail">订单明细</string>
    <string name="orderDetail2">订单详情</string>
    <string name="setComment">设置备注</string>
    <string name="rightNow">立即</string>
    <string name="timming">定时</string>
    <string name="self">自提</string>
    <string name="date">预约</string>
    <string name="goPay">去支付</string>
    <string name="youxiaoqi">有效期</string>
    <string name="addInfo">地址信息</string>
    <string name="acceptInfo">收货信息</string>
    <string name="putAddInfo">添加地址信息</string>
    <string name="noMsg">无信息记录</string>
    <string name="addAddress">请添加收货信息…</string>
    <string name="name">姓&#160;&#160;名：</string>
    <string name="inputName">请输入真实姓名</string>
    <string name="phone">手&#160;&#160;机：</string>
    <string name="inputPhone">请输入手机号</string>
    <string name="sex">性&#160;&#160;别：</string>
    <string name="man">男生</string>
    <string name="woman">女生</string>
    <string name="locateArea">定位区域：</string>
    <string name="goLocate">去定位</string>
    <string name="addDetail">详细地址：</string>
    <string name="addDetailhint">街道/门牌号/楼层</string>
    <string name="defAdd">默认地址</string>
    <string name="locateSearchHint">搜索地址/商品/店铺</string>
    <string name="add">添加</string>
    <string name="editAddInfo">编辑收货地址</string>
    <string name="addAddInfo">添加收货地址</string>
    <string name="confirm_delete">确定删除该收货地址？</string>
    <string name="callingPay">正在调起支付。。。</string>
    <string name="hotel">酒店</string>
    <string name="all">全部</string>
    <string name="delivery">外送</string>
    <string name="toShop">到店</string>
    <string name="sortDistance">按距离排序</string>
    <string name="shop_attention">关注店铺</string>
    <string name="collectShop">收藏店铺</string>
    <string name="phone2">电话：</string>
    <string name="address">地址：</string>
    <string name="ad_safety">账号安全</string>
    <string name="privacySetting">隐私设置</string>
    <string name="notifySetting">新消息提醒</string>
    <string name="normalSetting">通用</string>
    <string name="about">关于M.Tool</string>
    <string name="oneMoreTime">再来一单</string>
    <string name="selectYourSearchTag">请选择您希望搜索的分类</string>
    <string name="search_tag_food">外送/到店</string>
    <string name="search_tag_city_serv">同城服务</string>
    <string name="search_tag_msg">消息/联系人</string>
    <string name="search_tag_active">动&#160;&#160;态</string>
    <string name="search_tag_collect">收&#160;&#160;藏</string>
    <string name="search_tag_good">赞&#160;&#160;过</string>
    <string name="search_tag_order">订&#160;&#160;单</string>
    <string name="searchHint">输入地标名称或地址信息</string>
    <string name="locate">定&#160;&#160;位</string>
    <string name="search_history">搜索历史</string>
    <string name="sortScore">按评分排序</string>
    <string name="sortSales">按销量排序</string>
    <string name="wannaBePartner">我要合作</string>
    <string name="sercCenter">客服中心</string>
    <string name="netErroRetry">网络异常，请稍后重试</string>
    <string name="loginText1">登录即代表阅读并同意<u>《服务条款》</u></string>
    <string name="collect_single">收藏单品</string>
    <string name="collect">收藏</string>
    <string name="mingpain">名片</string>
    <string-array name="mainTabs">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="cartTabs">
        <item>外送订单</item>
        <item>到店订单</item>
    </string-array>
</resources>
