<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/filterItemHeigh"
        android:layout_marginLeft="16dp"
        android:gravity="center">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textColor="@color/textTmp2"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginRight="32dp"
        android:background="@color/dividerColor"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/filterItemHeigh"
        android:layout_marginLeft="16dp"
        android:gravity="center">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food"
            android:textColor="@color/textTmp2"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginRight="32dp"
        android:background="@color/dividerColor"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/filterItemHeigh"
        android:layout_marginLeft="16dp"
        android:gravity="center">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entertaiment"
            android:textColor="@color/textTmp2"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginRight="32dp"
        android:background="@color/dividerColor"
        />
</LinearLayout>